# fastapi-RP

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
core/: app.py  session.py
endpoints/: department.py  dependencies.py  division.py  position.py  staff_schedule.py
fastapi_RP/backend/: __init__.py
fastapi_RP/backend/core/: app.py  session.py
fastapi_RP/backend/endpoints/: __init__.py  department.py  dependencies.py  division.py  position.py  staff_schedule.py
fastapi_RP/backend/models/: __init__.py  department.py  division.py  position.py  staff_schedule.py
fastapi_RP/backend/repositiories/: department.py  division.py  position.py  staff_schedule.py
fastapi_RP/backend/schemas/: department.py  division.py  position.py  staff_schedule.py
fastapi_RP/backend/service/: department.py  division.py  position.py  staff_schedule.py
fastapi_RP/backend/utils/: sql_repository.py
fastapi_RP/backend/webapps/: __init__.py  department.py  division.py  form_department.py  form_division.py  form_position.py  from_staff_schedule.py  position.py  staff_schedule.py
fastapi_RP/templates/components/: cards.html  navbar.html
fastapi_RP/tests/: test_status.py
models/: __init__.py  department.py  division.py  position.py  staff_schedule.py
repositiories/: department.py  division.py  position.py  staff_schedule.py
schemas/: department.py  division.py  position.py  staff_schedule.py
service/: department.py  division.py  position.py  staff_schedule.py
utils/: abstract_repository.py  sql_repository.py
(+15 files in other folders)
